--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
+    <link rel="icon" type="image/png" href="/download.png" /> <!-- Changed favicon to download.png -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Lakshaditya Singh - AI-focused Frontend Developer & Web Manager</title>
     <meta name="description" content="Portfolio of Lakshaditya Singh, Web Manager at ITC IIT Bombay. Leading digital initiatives and full-stack development with modern 3D interactions." />
